Add forum permissions

--- a/config/services.yml
+++ b/config/services.yml
@@ -2,6 +2,7 @@ services:
     vse.smartsubjects.listener:
         class: vse\smartsubjects\event\main_listener
         arguments:
+            - '@auth'
             - '@dbal.conn'
             - '@request'
             - '@user'
