--- a/composer.json
+++ b/composer.json
@@ -2,18 +2,20 @@
     "name": "vse/smartsubjects",
     "type": "phpbb-extension",
     "description": "When editing the subject of the first post in a topic, all subsequent posts with matching (Re:) subjects will also be updated to the new subject.",
-    "homepage": "",
+    "homepage": "https://github.com/VSEphpbb/smartsubjects",
     "version": "1.0.0-b2",
-    "time": "2015-12-18",
+	"keywords": ["phpbb", "extension", "subject", "edit", "smart"],
     "license": "GPL-2.0",
     "authors": [
         {
-            "name": "VSE",
+            "name": "Matt Friedman (VSE)",
+			"homepage": "http://mattfriedman.me",
             "role": "Developer"
         }
     ],
     "require": {
-        "php": ">=5.3.3"
+        "php": ">=5.3.3",
+		"composer/installers": "~1.0"
     },
     "require-dev": {
         "phpbb/epv": "dev-master"
@@ -22,6 +24,11 @@
         "display-name": "Smart Subjects",
         "soft-require": {
             "phpbb/phpbb": ">=3.1.0"
-        }
+		},
+		"version-check": {
+			"host": "vsephpbb.github.io",
+			"directory": "/version",
+			"filename": "smartsubjects.json"
+		}
     }
 }
