--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,13 @@
     ],
     "require": {
         "php": ">=5.3.3",
+		"phpbb/phpbb": ">=3.1.0",
 		"composer/installers": "~1.0"
     },
     "extra": {
         "display-name": "Smart Subjects",
         "soft-require": {
-            "phpbb/phpbb": ">=3.1.0"
+            "phpbb/phpbb": ">=3.1.0,<3.3"
 		},
 		"version-check": {
 			"host": "vsephpbb.github.io",
