--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "extra": {
         "display-name": "Smart Subjects",
         "soft-require": {
-            "phpbb/phpbb": ">=3.1.0,<3.3"
+            "phpbb/phpbb": ">=3.1.0"
 		},
 		"version-check": {
 			"host": "vsephpbb.github.io",
