Modernize, drop support for phpBB 3.1

--- a/config/services.yml
+++ b/config/services.yml
@@ -4,8 +4,8 @@ services:
         arguments:
             - '@auth'
             - '@dbal.conn'
+            - '@language'
             - '@request'
-            - '@user'
             - '%tables.forums%'
             - '%tables.posts%'
         tags:
